--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@vx/event": "0.0.179",
     "@vx/gradient": "0.0.165",
     "@vx/group": "0.0.170",
+    "@vx/marker": "0.0.179",
     "@vx/scale": "0.0.179",
     "@vx/shape": "0.0.179",
     "@vx/tooltip": "0.0.179",
